--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,31 @@
-Django~=2.2.4
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+configparser==4.0.2
+dj-database-url==0.5.0
+Django==2.2.9
+Flask==1.1.1
+gunicorn==20.0.4
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+lxml==4.4.2
+MarkupSafe==1.1.1
+MySQL-python==1.2.5
+mysqlclient==1.4.6
+peewee==3.13.1
+pkg-resources==0.0.0
+psycopg2==2.8.4
+py-mysql2pgsql==0.1.5
+PyMySQL==0.9.3
+pytz==2019.3
+PyYAML==5.3
+requests==2.22.0
+soupsieve==1.9.5
+sqlparse==0.3.0
+termcolor==1.1.0
+urllib3==1.25.7
+Werkzeug==0.16.0
+whitenoise==5.0.1
