--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 lxml==4.4.2
 MarkupSafe==1.1.1
-MySQL-python==1.2.5
+mysql-connector==2.2.9
 mysqlclient==1.4.6
 peewee==3.13.1
 pkg-resources==0.0.0
